tests-integration/tests/custom/error-01/stderr.expected
Error:
    model.eprime:1:7:
  |
1 | find x
  |       ^
Missing Domain

model.eprime:1:7:
  |
1 | find x
  |       ^
Missing :


